@@ -8043,6 +8043,9 @@ Core and Builtins
 - Issue #18137: Detect integer overflow on precision in float.__format__()
   and complex.__format__().
 
+- Issue #15767: Introduce ModuleNotFoundError which is raised when a module
+  could not be found.
+
 - Issue #18183: Fix various unicode operations on strings with large unicode
   codepoints.
 
